Improve regexes for short conference names

--- a/allreferences.bib
+++ b/allreferences.bib
@@ -60,8 +60,7 @@
   author	= {Zeynep Akata and Scott E. Reed and Daniel Walter and
 		  Honglak Lee and Bernt Schiele},
   booktitle	= {{IEEE} Conference on Computer Vision and Pattern
-		  Recognition, {CVPR} 2015, Boston, MA, USA, June 7-12,
-		  2015},
+		  Recognition ({CVPR})},
   doi		= {10.1109/CVPR.2015.7298911},
   pages		= {2927--2936},
   title		= {Evaluation of output embeddings for fine-grained image
@@ -206,9 +205,8 @@
 		  Sigler and Mateusz Litwin and Scott Gray and Benjamin Chess
 		  and Jack Clark and Christopher Berner and Sam McCandlish
 		  and Alec Radford and Ilya Sutskever and Dario Amodei},
-  booktitle	= {Advances in Neural Information Processing Systems 33:
-		  Annual Conference on Neural Information Processing Systems
-		  2020, NeurIPS 2020, December 6-12, 2020, virtual},
+  booktitle	= {Advances in Neural Information Processing Systems
+		  (NeurIPS)},
   title		= {Language Models are Few-Shot Learners},
   year		= {2020}
 }
@@ -303,9 +301,8 @@
 @InProceedings{	  choi2018stargan,
   author	= {Yunjey Choi and Min{-}Je Choi and Munyoung Kim and
 		  Jung{-}Woo Ha and Sunghun Kim and Jaegul Choo},
-  booktitle	= {2018 {IEEE} Conference on Computer Vision and Pattern
-		  Recognition, {CVPR} 2018, Salt Lake City, UT, USA, June
-		  18-22, 2018},
+  booktitle	= {{IEEE} Conference on Computer Vision and Pattern
+		  Recognition ({CVPR})},
   doi		= {10.1109/CVPR.2018.00916},
   pages		= {8789--8797},
   title		= {StarGAN: Unified Generative Adversarial Networks for
@@ -419,8 +416,8 @@
   author	= {Thomas L. Dean and Mark A. Ruzon and Mark Segal and
 		  Jonathon Shlens and Sudheendra Vijayanarasimhan and Jay
 		  Yagnik},
-  booktitle	= {2013 {IEEE} Conference on Computer Vision and Pattern
-		  Recognition, Portland, OR, USA, June 23-28, 2013},
+  booktitle	= {{IEEE} Conference on Computer Vision and Pattern
+		  Recognition ({CVPR})},
   doi		= {10.1109/CVPR.2013.237},
   pages		= {1814--1821},
   title		= {Fast, Accurate Detection of 100, 000 Object Classes on a
@@ -675,9 +672,8 @@
 
 @InProceedings{	  gatys2016image,
   author	= {Leon A. Gatys and Alexander S. Ecker and Matthias Bethge},
-  booktitle	= {2016 {IEEE} Conference on Computer Vision and Pattern
-		  Recognition, {CVPR} 2016, Las Vegas, NV, USA, June 27-30,
-		  2016},
+  booktitle	= {{IEEE} Conference on Computer Vision and Pattern
+		  Recognition ({CVPR})},
   doi		= {10.1109/CVPR.2016.265},
   pages		= {2414--2423},
   title		= {Image Style Transfer Using Convolutional Neural Networks},
@@ -742,10 +738,7 @@
 @InProceedings{	  gretton2008kernel,
   author	= {Arthur Gretton and Kenji Fukumizu and Choon Hui Teo and Le
 		  Song and Bernhard Sch{\"{o}}lkopf and Alexander J. Smola},
-  booktitle	= {Advances in Neural Information Processing Systems 20,
-		  Proceedings of the Twenty-First Annual Conference on Neural
-		  Information Processing Systems, Vancouver, British
-		  Columbia, Canada, December 3-6, 2007},
+  booktitle	= {Advances in Neural Information Processing Systems (NIPS)},
   pages		= {585--592},
   title		= {A Kernel Statistical Test of Independence},
   year		= {2007}
@@ -828,8 +821,7 @@
   author	= {Matthias Hein and Maksym Andriushchenko and Julian
 		  Bitterwolf},
   booktitle	= {{IEEE} Conference on Computer Vision and Pattern
-		  Recognition, {CVPR} 2019, Long Beach, CA, USA, June 16-20,
-		  2019},
+		  Recognition ({CVPR})},
   doi		= {10.1109/CVPR.2019.00013},
   pages		= {41--50},
   title		= {Why ReLU Networks Yield High-Confidence Predictions Far
@@ -992,9 +984,8 @@
 @InProceedings{	  isola2017image,
   author	= {Phillip Isola and Jun{-}Yan Zhu and Tinghui Zhou and
 		  Alexei A. Efros},
-  booktitle	= {2017 {IEEE} Conference on Computer Vision and Pattern
-		  Recognition, {CVPR} 2017, Honolulu, HI, USA, July 21-26,
-		  2017},
+  booktitle	= {{IEEE} Conference on Computer Vision and Pattern
+		  Recognition ({CVPR})},
   doi		= {10.1109/CVPR.2017.632},
   pages		= {5967--5976},
   title		= {Image-to-Image Translation with Conditional Adversarial
@@ -1317,8 +1308,7 @@
   author	= {Byungju Kim and Hyunwoo Kim and Kyungsu Kim and Sungjin
 		  Kim and Junmo Kim},
   booktitle	= {{IEEE} Conference on Computer Vision and Pattern
-		  Recognition, {CVPR} 2019, Long Beach, CA, USA, June 16-20,
-		  2019},
+		  Recognition ({CVPR})},
   doi		= {10.1109/CVPR.2019.00922},
   pages		= {9012--9020},
   title		= {Learning Not to Learn: Training Deep Neural Networks With
@@ -1393,9 +1383,8 @@
 @InProceedings{	  kumar2018generalized,
   author	= {Vinay Kumar Verma and Gundeep Arora and Ashish Mishra and
 		  Piyush Rai},
-  booktitle	= {2018 {IEEE} Conference on Computer Vision and Pattern
-		  Recognition, {CVPR} 2018, Salt Lake City, UT, USA, June
-		  18-22, 2018},
+  booktitle	= {{IEEE} Conference on Computer Vision and Pattern
+		  Recognition ({CVPR})},
   doi		= {10.1109/CVPR.2018.00450},
   pages		= {4281--4289},
   title		= {Generalized Zero-Shot Learning via Synthesized Examples},
@@ -1414,8 +1403,9 @@
 @InProceedings{	  lampert2009,
   author	= {Christoph H. Lampert and Hannes Nickisch and Stefan
 		  Harmeling},
-  booktitle	= {{IEEE} Conference on Computer Vision and Pattern
-		  Recognition ({CVPR})},
+  booktitle	= {2009 {IEEE} Computer Society Conference on Computer Vision
+		  and Pattern Recognition {(CVPR} 2009), 20-25 June 2009,
+		  Miami, Florida, {USA}},
   doi		= {10.1109/CVPR.2009.5206594},
   pages		= {951--958},
   title		= {Learning to detect unseen object classes by between-class
@@ -1425,10 +1415,7 @@
 
 @InProceedings{	  LanSri09,
   author	= {Bharath K. Sriperumbudur and Gert R. G. Lanckriet},
-  booktitle	= {Advances in Neural Information Processing Systems 22: 23rd
-		  Annual Conference on Neural Information Processing Systems
-		  2009. Proceedings of a meeting held 7-10 December 2009,
-		  Vancouver, British Columbia, Canada},
+  booktitle	= {Advances in Neural Information Processing Systems (NIPS)},
   pages		= {1759--1767},
   title		= {On the Convergence of the Concave-Convex Procedure},
   year		= {2009}
@@ -1831,8 +1818,7 @@
   author	= {Novi Quadrianto and Viktoriia Sharmanska and Oliver
 		  Thomas},
   booktitle	= {{IEEE} Conference on Computer Vision and Pattern
-		  Recognition, {CVPR} 2019, Long Beach, CA, USA, June 16-20,
-		  2019},
+		  Recognition ({CVPR})},
   doi		= {10.1109/CVPR.2019.00842},
   pages		= {8227--8236},
   title		= {Discovering Fair Representations in the Data Domain},
@@ -1977,8 +1963,7 @@
   author	= {Edgar Sch{\"{o}}nfeld and Sayna Ebrahimi and Samarth Sinha
 		  and Trevor Darrell and Zeynep Akata},
   booktitle	= {{IEEE} Conference on Computer Vision and Pattern
-		  Recognition, {CVPR} 2019, Long Beach, CA, USA, June 16-20,
-		  2019},
+		  Recognition ({CVPR})},
   doi		= {10.1109/CVPR.2019.00844},
   pages		= {8247--8255},
   title		= {Generalized Zero- and Few-Shot Learning via Aligned
@@ -2104,10 +2089,7 @@
 
 @InProceedings{	  vanhatalo2009gaussian,
   author	= {Jarno Vanhatalo and Pasi Jyl{\"{a}}nki and Aki Vehtari},
-  booktitle	= {Advances in Neural Information Processing Systems 22: 23rd
-		  Annual Conference on Neural Information Processing Systems
-		  2009. Proceedings of a meeting held 7-10 December 2009,
-		  Vancouver, British Columbia, Canada},
+  booktitle	= {Advances in Neural Information Processing Systems (NIPS)},
   pages		= {1910--1918},
   title		= {Gaussian process regression with Student-t likelihood},
   year		= {2009}
@@ -2213,9 +2195,8 @@
 @InProceedings{	  xian2018feature,
   author	= {Yongqin Xian and Tobias Lorenz and Bernt Schiele and
 		  Zeynep Akata},
-  booktitle	= {2018 {IEEE} Conference on Computer Vision and Pattern
-		  Recognition, {CVPR} 2018, Salt Lake City, UT, USA, June
-		  18-22, 2018},
+  booktitle	= {{IEEE} Conference on Computer Vision and Pattern
+		  Recognition ({CVPR})},
   doi		= {10.1109/CVPR.2018.00581},
   pages		= {5542--5551},
   title		= {Feature Generating Networks for Zero-Shot Learning},
