--- a/allreferences.bib
+++ b/allreferences.bib
@@ -277,12 +277,7 @@
 
 @InProceedings{	  chiappa2019path,
   author	= {Silvia Chiappa},
-  booktitle	= {The Thirty-Third {AAAI} Conference on Artificial
-		  Intelligence, {AAAI} 2019, The Thirty-First Innovative
-		  Applications of Artificial Intelligence Conference, {IAAI}
-		  2019, The Ninth {AAAI} Symposium on Educational Advances in
-		  Artificial Intelligence, {EAAI} 2019, Honolulu, Hawaii,
-		  USA, January 27 - February 1, 2019},
+  booktitle	= {{AAAI} Conference on Artificial Intelligence},
   doi		= {10.1609/aaai.v33i01.33017801},
   pages		= {7801--7808},
   title		= {Path-Specific Counterfactual Fairness},
@@ -454,12 +449,7 @@
 @InProceedings{	  DimLiuParRad19,
   author	= {Christos Dimitrakakis and Yang Liu and David C. Parkes and
 		  Goran Radanovic},
-  booktitle	= {The Thirty-Third {AAAI} Conference on Artificial
-		  Intelligence, {AAAI} 2019, The Thirty-First Innovative
-		  Applications of Artificial Intelligence Conference, {IAAI}
-		  2019, The Ninth {AAAI} Symposium on Educational Advances in
-		  Artificial Intelligence, {EAAI} 2019, Honolulu, Hawaii,
-		  USA, January 27 - February 1, 2019},
+  booktitle	= {{AAAI} Conference on Artificial Intelligence},
   doi		= {10.1609/aaai.v33i01.3301509},
   pages		= {509--516},
   title		= {Bayesian Fairness},
