Re-add publishers to books

--- a/allreferences.bib
+++ b/allreferences.bib
@@ -257,6 +257,7 @@
 		  Alexander Zien},
   booktitle	= {Semi-Supervised Learning},
   pages		= {1--12},
+  publisher     = {The {MIT} Press},
   title		= {Introduction to Semi-Supervised Learning},
   year		= {2006}
 }
@@ -1151,6 +1152,7 @@
 
 @Book{		  kaplan2008structural,
   author	= {Kaplan, David},
+  publisher     = {Sage Publications},
   title		= {Structural equation modeling: Foundations and extensions},
   volume	= {10},
   year		= {2008}
@@ -1708,6 +1710,7 @@
 
 @Book{		  pearl2009causality,
   author	= {Pearl, Judea},
+  publisher     = {Cambridge university press},
   title		= {Causality},
   year		= {2009}
 }
@@ -1748,6 +1751,7 @@
 
 @Book{		  Perez19,
   author	= {Caroline Criado Perez},
+  publisher     = {Chatto \& Windus},
   title		= {Invisible women: Exposing data bias in a world designed
 		  for men},
   year		= {2019}
@@ -1869,6 +1873,7 @@
 
 @Book{		  rasmussen2006gaussian,
   author	= {Rasmussen, Carl Edward and Williams, Christopher KI},
+  publisher     = {MIT press},
   title		= {Gaussian process for machine learning},
   year		= {2006}
 }
