Lot's of changes

--- a/ch/1-introduction.tex
+++ b/ch/1-introduction.tex
@@ -139,7 +139,7 @@ how much a classifier is affected by the bias in the training set.
 
 \section{Relations to other fields and clarification of terms}
 \subsection{aka: Isn't this thesis actually about XY instead of fairness?}
-The thesis is mostly written from the perspective of algorithmic fairness,
+The thesis is principally written from the perspective of algorithmic fairness,
 but it touches on other fields as well, like \emph{domain shift} and \emph{causality}.
 Furthermore, the thesis makes use of concepts like \emph{transferable representations}
 and \emph{interpretability}.
