--- a/main.tex
+++ b/main.tex
@@ -168,6 +168,9 @@ titlepage,numbers=noenddot,%1headlines,
 %\usepackage{pgfplots} % External TikZ/PGF support (thanks to Andreas Nautsch)
 %\usetikzlibrary{external}
 %\tikzexternalize[mode=list and make, prefix=ext-tikz/]
+\usepackage[dvipsnames]{xcolor}
+\usepackage[edges]{forest}
+\usetikzlibrary{shadows.blur}
 % ****************************************************************************************************
 
 
@@ -452,6 +455,7 @@ titlepage,numbers=noenddot,%1headlines,
 % only compile a part of the document
 % ************************************
 % \includeonly{ch/2-related-work}
+\includeonly{ch/3-structure}
 
 
 % ********************************************************************
